# icftner

./: .gitignore  MODELS.md  Makefile  README.md  TABLES.md  cli.py  pyproject.toml
.github/workflows/: check.yml  pre-commit.yml
dev/script/: download-out.sh  download-tensorboard.sh  upload.sh
dev/slurm/: bert-homelab.sbatch
notebooks/: embeddings.py  ftsquad.py  graphs.py  multinerd.py  multinerd_eda.py  pt_forwad_pass.py
scripts/: bert-nix.sbatch
src/cptlms/: bert.py  squad.py  trainer.py
src/cptlms/datasets/: multinerd.py  squad.py
src/cptlms/models/: bert.py  prompt_encoder.py
src/cptlms/scripts/: benchmark_bert_multinerd.py  ft_bert_multinerd.py  ft_bert_squad.py  pt_bert_multinerd.py  pt_bert_squad.py
src/icft/datasets/: multinerd.py
src/icft/models/: bert.py
src/icft/scripts/: export_tensorboard.py  fine_tune_bert_multinerd.py  prompt_info_multinerd.py  prompt_tune_bert_multinerd.py
src/icftner/datasets/: multinerd.py  squad.py
src/icftner/models/: bert.py  prompt_encoder.py
src/icftner/scripts/: benchmark_bert_multinerd.py  ft_bert_multinerd.py  ft_bert_squad.py  prompt_info_multinerd.py  pt_bert_multinerd.py  pt_bert_squad.py
tests/: test_datasets.py  test_models.py
thesis/: lib.typ  main.typ  ref.bib
tuning/: bert.py  gpt2.py
typesetting/: main.typ  ref.bib
