[project]
name = "icft"
version = "0.1.0"
description = "In-Context Fine-Tuning"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "transformers>=4.57.1",
    "tensorboard>=2.20.0",
    "scikit-learn>=1.8.0",
    "accelerate>=1.12.0",
    "datasets>=4.3.0",
    "polars>=1.34.0",
    "typer>=0.20.0",
    "torch>=2.9.0",
]

[dependency-groups]
dev = [
    "marimo>=0.19.4",
    "pytest>=9.0.1",
    "ruff>=0.14.2",
    "ty>=0.0.1a25",
]
