[project]
name = "icft"
version = "0.1.0"
description = "In-Context Fine-Tuning"
readme = "README.md"
requires-python = "~=3.13.7"
dependencies = [
    "transformers~=5.0.0",
    "tensorboard~=2.20.0",
    "scikit-learn~=1.8.0",
    "accelerate~=1.12.0",
    "datasets~=4.5.0",
    "polars~=1.37.1",
    "typer~=0.21.1",
    "torch~=2.10.0",
]

[dependency-groups]
dev = [
    "marimo~=0.19.7",
    "ruff~=0.14.14",
    "ty~=0.0.14",
]
